...
  return (
    <SettingsScrollView
      keyboardShouldPersistTaps="always"
      automaticallyAdjustContentInsets
      contentInsetAdjustmentBehavior="automatic"
      automaticallyAdjustKeyboardInsets
      testID="ElectrumSettingsScrollView"
    >
      <SettingsSection>
        <SettingsListItem
          title={loc.settings.electrum_offline_mode}
          subtitle={loc.settings.electrum_offline_description}
          switch={{
...
